--- a/index.html
+++ b/index.html
@@ -30,8 +30,24 @@
         <p class="card__billing--monthly">Monthly Billing</p>
         <label for="" class="switch">
           <input type="checkbox" name="" id="">
-          
+          <span class="slider round"></span>
+          <p class="class__billing--yearly">
+            yearly Billing <span class="disount">25% discount
+            </span>
+          </p>
         </label>
+      </div>
+      <hr/>
+      <div class="card__footer">
+        <ul class="card__footer--benefits">
+          <li class="benefit__items"><p>Unlimited websites</p></li>
+          <li class="benefit__items"><p>100% data ownership</p></li>
+          <li class="benefit__items"><p>Email reports</p></li>
+        </ul>
+
+        <button class="card__footer--btn">
+          start my trial
+        </button>
       </div>
     </main>
   </div>
