--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   
   <title>Frontend Mentor | Interactive pricing component</title>
 
+  <link rel="stylesheet" href="./dist/css/main.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
