--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   
   <title>Frontend Mentor | Interactive pricing component</title>
 
+  <!-- google font CDN -->
+
+  <link rel="preconnect" href="https: //fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./dist/css/main.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
