--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="card">
       <div class="card__price-range">
         <p class="card__price-range--pageviews"><span id="pageviews"></span>K pageviews</p>
-        <h2 class="card__price-range--rate"><span id="rate"></span>.00</h2><p>/month</p>
+        <h2 class="card__price-range--rate"><span id="rate"></span>.00 <span class="per">/month</span></h2>
       </div>
       <div class="card__slider">
         <input type="range" class="slider" id="TheRange" min="1" max="50">
