--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
       </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
-        <label for="" class="switch">
-          <input type="checkbox" name="" id="">
+
+          <input type="checkbox" class="switch__box" id="">
           <span class="slider round"></span>
-          <p class="class__billing--yearly">
-            yearly Billing <span class="disount">25% discount
+          <p class="class__billing--yearly">yearly Billing <span class="disount">
+              25% discount
             </span>
           </p>
-        </label>
       </div>
       <hr/>
       <div class="card__footer">
