--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <input type="checkbox" class="switch__box" id="">
           <span class="slider round"></span>
-          <p class="class__billing--yearly">yearly Billing <span class="disount">
+          <p class="class__billing--yearly">yearly Billing <span class="discount">
               25% discount
             </span>
           </p>
