--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
       </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
-
-          <input type="checkbox" class="switch__box" id="">
-          <span class="slider round"></span>
+        <label class="switch">
+          <input type="checkbox" >
+          <span class="slider__tool round"></span>
+          </label>
           <p class="class__billing--yearly">yearly Billing <span class="discount">
               25% discount
             </span>
