commit range slider

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <h3 class="card__main-subtitle">Sign-up for our 30-day trial. No credit card required.</h3>
     <main class="card">
       <div class="card__price-range">
-        <p class="card__price-range--pageviews"><span id="pageviews"></span>K pageviews</p>
+        <p class="card__price-range--pageviews">100K pageviews</p>
         <h2 class="card__price-range--rate"><span id="rate"></span>.00 <span class="per">/month</span></h2>
       </div>
       <div class="card__slider">
-        <input type="range" class="slider" id="TheRange" min="1" max="50">
+        <input type="range" class="slider" id="TheRange" min="1" max="30">
       </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
@@ -62,5 +62,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="./JS/main.js"></script>
 </body>
 </html>
