--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h2 class="card__price-range--rate">$<span id="rate"></span>.00 <span class="per">/month</span></h2>
       </div>
       <div class="card__slider">
-        <input type="range" class="slider" id="TheRange" min="1" max="30">
+        <input type="range" class="slider" id="TheRange" value="100" min="10" max="500" tabindex="0" step="1"/>
+        <input type="range" class="slider two" id="TheRange" value="100" min="10" max="500" tabindex="0" step="1" />
       </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
