--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <p class="card__price-range--pageviews">100K pageviews</p>
         <h2 class="card__price-range--rate">$<span id="rate"></span>.00 <span class="per">/month</span></h2>
       </div>
+      <div class="slider">
+        <label>
+        <input type="range" value="16" id="TheRange" min="1" max="32" class="slider__range">
+        </label>
+      </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
         <label class="switch">
