--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="slider">
         <label>
-        <input type="range" value="16" id="TheRange" min="1" max="32" class="slider__range">
+        <input type="range"  id="TheRange" min="1" max="32" class="slider__range" name="price-range">
         </label>
       </div>
       <div class="card__billing">
