commit overlay image

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 </head>
 <body>
   <div class="container">
+    <div class="top">
+      <img src="/images/pattern-circles.svg" class="top__overlay">
     <h1 class="card__main-title">Simple, traffic-based pricing</h1>
     <h3 class="card__main-subtitle">Sign-up for our 30-day trial. No credit card required.</h3>
+    </div>
     <main class="card">
       <div class="card__price-range">
         <p class="card__price-range--pageviews">100K pageviews</p>
