--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <div class="container">
     <div class="top">
       <img src="/images/pattern-circles.svg" class="top__overlay">
+      <div class="card-title">
     <h1 class="card__main-title">Simple, traffic-based pricing</h1>
     <h3 class="card__main-subtitle">Sign-up for our 30-day trial. No credit card required.</h3>
+    </div>
     </div>
     <main class="card">
       <div class="card__price-range">
