add media query

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     </div>
     <main class="card">
+      <div class="card__upper">
       <div class="card__price-range">
         <p class="card__price-range--pageviews">100K pageviews</p>
         <h2 class="card__price-range--rate">$<span id="rate"></span>.00 <span class="per">/month</span></h2>
@@ -39,6 +40,7 @@
         <label>
         <input type="range"  id="TheRange" min="1" max="32" class="slider__range" name="price-range">
         </label>
+      </div>
       </div>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
