--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span class="slider__tool round"></span>
           </label>
           <p class="class__billing--yearly">yearly Billing <span class="discount">
-              25% discount
+              25% <span class="mobile">discount</span> 
             </span>
           </p>
       </div>
