commit slider media query

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
       </div>
       <div class="slider">
         <label>
-        <input type="range"  id="TheRange" min="1" max="32" class="slider__range" name="price-range">
+        <input type="range"  id="TheRange" min="1" max="32" class="slider__range one" name="price-range">
+
+        <input type="range" id="TheRangeMobil" min="1" max="32" class="slider__range two" name="price-range">
         </label>
       </div>
-      <h2 class="card-mobile__price-range--rate">$<span id="rate"></span>.00 <span class="per">/month</span></h2>
+      <h2 class="card-mobile__price-range--rate">$<span id="rateMobil"></span>.00 <span class="per">/month</span></h2>
       <div class="card__billing">
         <p class="card__billing--monthly">Monthly Billing</p>
         <label class="switch">
@@ -71,5 +73,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
   <script src="./JS/main.js"></script>
+  <script src="index-two.js"></script>
 </body>
 </html>
