commit deletions and comments

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <div class="slider">
         <label>
         <input type="range"  id="TheRange" min="1" max="32" class="slider__range one" name="price-range">
-
-        <input type="range" id="TheRangeMobil" min="1" max="32" class="slider__range two" name="price-range">
+<!-- 
+        <input type="range" id="TheRangeMobil" min="1" max="32" class="slider__range two" name="price-range"> -->
         </label>
       </div>
       <h2 class="card-mobile__price-range--rate">$<span id="rateMobil"></span>.00 <span class="per">/month</span></h2>
