commit functional javascript

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <main class="card">
       <div class="card__price-range">
         <p class="card__price-range--pageviews">100K pageviews</p>
-        <h2 class="card__price-range--rate">$<span id="rate"></span>.00 <span class="per">/month</span></h2>
+        <h2 class="card__price-range--rate"><span id="rate"></span><span class="per">/month</span></h2>
       </div>
       <div class="slider">
         <label>
-        <input type="range"  id="TheRange" min="1" max="32" class="slider__range one" name="price-range">
+        <input type="range"  id="TheRange" min="1" max="32" class="slider__range" name="price-range">
 <!-- 
         <input type="range" id="TheRangeMobil" min="1" max="32" class="slider__range two" name="price-range"> -->
         </label>
